--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 <body>
     <canvas id="glCanvas" width="640" height="480"></canvas>
 </body>
-<script src="./src/main.js"></script>
+<script src="./main.js"></script>
 </html>
